RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/03_0008/03_merged.txt
/home/dimpling/AutoSpec/out/03_0008/03_merged.c:41:5: error: unterminated comment
   41 |     /*@;
      |     ^
